# Federated-Learning-with-Flower-Framework-

./: README.md
fl_solution-main/: README.md  app-store-integration.md  docker-compose.yml  pyproject.toml
fl_solution-main/client/: Dockerfile  client.py  requirements.txt  run.sh
fl_solution-main/dataset/: Dockerfile  prepare_data.py  requirements.txt
fl_solution-main/results/: Dockerfile  collect_predictions.py
fl_solution-main/server/: Dockerfile  run.sh  server.py
fl_solution-main/web_app/: Dockerfile  compose.yml  web-app.py
fl_solution-main/web_app/kube/: fl-web-deployment.yaml  fl-web-service.yaml  results-persistentvolumeclaim.yaml
