[tool.poetry]
name = "federatedlearning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flwr = "^0.17.0"  # For development: { path = "../../", develop = true }
tensorflow-cpu = "^2.6.2"
pandas = "^1.4.2"
sklearn = "^0.0"
keras-metrics = "^1.1.0"
matplotlib = "^3.5.2"
keras = "^2.9.0"
tensorflow = "^2.9.1"
numpy = "^1.23.3"
pyESDL = "^22.7.0"
asyncio-nats-client = "^0.11.5"
attrs = "^22.1.0"
certifi = "^2022.9.14"
charset-normalizer = "^2.1.1"
defusedxml = "^0.7.1"
future-fstrings = "^1.2.0"
idna = "^3.4"
importlib-metadata = "^4.12.0"
influxdb = "^5.3.1"
jsonschema = "^4.16.0"
nats-python = "^0.8.0"
ordered-set = "^4.1.0"
pyrsistent = "^0.18.1"
pytz = "^2022.2.1"
requests = "^2.28.1"
RestrictedPython = "^5.2"
urllib3 = "^1.26.12"
openpyxl = "^3.1.2"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
numpy = "^1.23.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
